transform_generator/parser/generated/antlr/TransformExpParser.py
# Generated from antlr/TransformExp.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class TransformExpParser ( Parser ):

    grammarFileName = "TransformExp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'${'", "'}'", "'/'", "'%'", "'+'", "'-'", 
                     "'='", "'<'", "'<='", "'>'", "'>='", "'!='", "'<>'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'", "'('", "')'", "','", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "KW_AND", "KW_AS", "KW_ASC", 
                      "KW_BETWEEN", "KW_BIGINT", "KW_BY", "KW_CASE", "KW_CAST", 
                      "KW_CHAR", "KW_CROSS", "KW_DATE", "KW_DECIMAL", "KW_DESC", 
                      "KW_DISTINCT", "KW_DOUBLE", "KW_ELSE", "KW_END", "KW_FROM", 
                      "KW_FULL", "KW_GROUP", "KW_INT", "KW_IN", "KW_INNER", 
                      "KW_IS", "KW_JOIN", "KW_LEFT", "KW_LIKE", "KW_NOT", 
                      "KW_NULL", "KW_ON", "KW_OR", "KW_ORDER", "KW_OUTER", 
                      "KW_OVER", "KW_PARTITION", "KW_RIGHT", "KW_SELECT", 
                      "KW_SMALLINT", "KW_STRING", "KW_TIMESTAMP", "KW_TINYINT", 
                      "KW_THEN", "KW_WHEN", "KW_WHERE", "KW_HAVING", "DOT", 
                      "L_PAREN", "R_PAREN", "COMMA", "ASTERISK", "StringLiteral", 
                      "NumberLiteral", "Identifier", "WS" ]

    RULE_select = 0
    RULE_aliased_result_column = 1
    RULE_integer_literal = 2
    RULE_decimal_literal = 3
    RULE_string_literal = 4
    RULE_null_literal = 5
    RULE_field_name = 6
    RULE_table_name = 7
    RULE_field_name_list = 8
    RULE_exp_list = 9
    RULE_function = 10
    RULE_function_call = 11
    RULE_order_by_exp = 12
    RULE_order_by_exp_list = 13
    RULE_order_by = 14
    RULE_partition_by = 15
    RULE_window_function = 16
    RULE_cast = 17
    RULE_data_type = 18
    RULE_data_type_scale = 19
    RULE_data_type_decimal = 20
    RULE_case = 21
    RULE_when_clause = 22
    RULE_else_clause = 23
    RULE_alias = 24
    RULE_from_clause = 25
    RULE_join = 26
    RULE_join_operator = 27
    RULE_where_clause = 28
    RULE_group_by_clause = 29
    RULE_environment_variable = 30
    RULE_exp = 31

    ruleNames =  [ "select", "aliased_result_column", "integer_literal", 
                   "decimal_literal", "string_literal", "null_literal", 
                   "field_name", "table_name", "field_name_list", "exp_list", 
                   "function", "function_call", "order_by_exp", "order_by_exp_list", 
                   "order_by", "partition_by", "window_function", "cast", 
                   "data_type", "data_type_scale", "data_type_decimal", 
                   "case", "when_clause", "else_clause", "alias", "from_clause", 
                   "join", "join_operator", "where_clause", "group_by_clause", 
                   "environment_variable", "exp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    KW_AND=14
    KW_AS=15
    KW_ASC=16
    KW_BETWEEN=17
    KW_BIGINT=18
    KW_BY=19
    KW_CASE=20
    KW_CAST=21
    KW_CHAR=22
    KW_CROSS=23
    KW_DATE=24
    KW_DECIMAL=25
    KW_DESC=26
    KW_DISTINCT=27
    KW_DOUBLE=28
    KW_ELSE=29
    KW_END=30
    KW_FROM=31
    KW_FULL=32
    KW_GROUP=33
    KW_INT=34
    KW_IN=35
    KW_INNER=36
    KW_IS=37
    KW_JOIN=38
    KW_LEFT=39
    KW_LIKE=40
    KW_NOT=41
    KW_NULL=42
    KW_ON=43
    KW_OR=44
    KW_ORDER=45
    KW_OUTER=46
    KW_OVER=47
    KW_PARTITION=48
    KW_RIGHT=49
    KW_SELECT=50
    KW_SMALLINT=51
    KW_STRING=52
    KW_TIMESTAMP=53
    KW_TINYINT=54
    KW_THEN=55
    KW_WHEN=56
    KW_WHERE=57
    KW_HAVING=58
    DOT=59
    L_PAREN=60
    R_PAREN=61
    COMMA=62
    ASTERISK=63
    StringLiteral=64
    NumberLiteral=65
    Identifier=66
    WS=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SelectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aliased_result_column(self):
            return self.getTypedRuleContext(TransformExpParser.Aliased_result_columnContext,0)


        def EOF(self):
            return self.getToken(TransformExpParser.EOF, 0)

        def KW_SELECT(self):
            return self.getToken(TransformExpParser.KW_SELECT, 0)

        def KW_DISTINCT(self):
            return self.getToken(TransformExpParser.KW_DISTINCT, 0)

        def from_clause(self):
            return self.getTypedRuleContext(TransformExpParser.From_clauseContext,0)


        def where_clause(self):
            return self.getTypedRuleContext(TransformExpParser.Where_clauseContext,0)


        def group_by_clause(self):
            return self.getTypedRuleContext(TransformExpParser.Group_by_clauseContext,0)


        def getRuleIndex(self):
            return TransformExpParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect" ):
                return visitor.visitSelect(self)
            else:
                return visitor.visitChildren(self)




    def select(self):

        localctx = TransformExpParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_select)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TransformExpParser.KW_SELECT:
                self.state = 64
                self.match(TransformExpParser.KW_SELECT)


            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TransformExpParser.KW_DISTINCT:
                self.state = 67
                self.match(TransformExpParser.KW_DISTINCT)


            self.state = 70
            self.aliased_result_column()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TransformExpParser.KW_FROM:
                self.state = 71
                self.from_clause()


            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TransformExpParser.KW_WHERE:
                self.state = 74
                self.where_clause()


            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TransformExpParser.KW_GROUP:
                self.state = 77
                self.group_by_clause()


            self.state = 80
            self.match(TransformExpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Aliased_result_columnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(TransformExpParser.ExpContext,0)


        def KW_AS(self):
            return self.getToken(TransformExpParser.KW_AS, 0)

        def Identifier(self):
            return self.getToken(TransformExpParser.Identifier, 0)

        def getRuleIndex(self):
            return TransformExpParser.RULE_aliased_result_column

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAliased_result_column" ):
                listener.enterAliased_result_column(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAliased_result_column" ):
                listener.exitAliased_result_column(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAliased_result_column" ):
                return visitor.visitAliased_result_column(self)
            else:
                return visitor.visitChildren(self)




    def aliased_result_column(self):

        localctx = TransformExpParser.Aliased_result_columnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_aliased_result_column)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.exp(0)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TransformExpParser.KW_AS:
                self.state = 83
                self.match(TransformExpParser.KW_AS)
                self.state = 84
                self.match(TransformExpParser.Identifier)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Integer_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NumberLiteral(self):
            return self.getToken(TransformExpParser.NumberLiteral, 0)

        def getRuleIndex(self):
            return TransformExpParser.RULE_integer_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger_literal" ):
                listener.enterInteger_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger_literal" ):
                listener.exitInteger_literal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger_literal" ):
                return visitor.visitInteger_literal(self)
            else:
                return visitor.visitChildren(self)




    def integer_literal(self):

        localctx = TransformExpParser.Integer_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_integer_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(TransformExpParser.NumberLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decimal_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(TransformExpParser.DOT, 0)

        def NumberLiteral(self, i:int=None):
            if i is None:
                return self.getTokens(TransformExpParser.NumberLiteral)
            else:
                return self.getToken(TransformExpParser.NumberLiteral, i)

        def getRuleIndex(self):
            return TransformExpParser.RULE_decimal_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecimal_literal" ):
                listener.enterDecimal_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecimal_literal" ):
                listener.exitDecimal_literal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecimal_literal" ):
                return visitor.visitDecimal_literal(self)
            else:
                return visitor.visitChildren(self)




    def decimal_literal(self):

        localctx = TransformExpParser.Decimal_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decimal_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TransformExpParser.NumberLiteral:
                self.state = 89
                self.match(TransformExpParser.NumberLiteral)


            self.state = 92
            self.match(TransformExpParser.DOT)
            self.state = 93
            self.match(TransformExpParser.NumberLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class String_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self):
            return self.getToken(TransformExpParser.StringLiteral, 0)

        def getRuleIndex(self):
            return TransformExpParser.RULE_string_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_literal" ):
                listener.enterString_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_literal" ):
                listener.exitString_literal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString_literal" ):
                return visitor.visitString_literal(self)
            else:
                return visitor.visitChildren(self)




    def string_literal(self):

        localctx = TransformExpParser.String_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_string_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(TransformExpParser.StringLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Null_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_NULL(self):
            return self.getToken(TransformExpParser.KW_NULL, 0)

        def getRuleIndex(self):
            return TransformExpParser.RULE_null_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNull_literal" ):
                listener.enterNull_literal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNull_literal" ):
                listener.exitNull_literal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNull_literal" ):
                return visitor.visitNull_literal(self)
            else:
                return visitor.visitChildren(self)




    def null_literal(self):

        localctx = TransformExpParser.Null_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_null_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(TransformExpParser.KW_NULL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TransformExpParser.Identifier, 0)

        def table_name(self):
            return self.getTypedRuleContext(TransformExpParser.Table_nameContext,0)


        def DOT(self):
            return self.getToken(TransformExpParser.DOT, 0)

        def getRuleIndex(self):
            return TransformExpParser.RULE_field_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_name" ):
                listener.enterField_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_name" ):
                listener.exitField_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_name" ):
                return visitor.visitField_name(self)
            else:
                return visitor.visitChildren(self)




    def field_name(self):

        localctx = TransformExpParser.Field_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_field_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 99
                self.table_name()
                self.state = 100
                self.match(TransformExpParser.DOT)


            self.state = 104
            self.match(TransformExpParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TransformExpParser.Identifier, 0)

        def getRuleIndex(self):
            return TransformExpParser.RULE_table_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable_name" ):
                listener.enterTable_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable_name" ):
                listener.exitTable_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTable_name" ):
                return visitor.visitTable_name(self)
            else:
                return visitor.visitChildren(self)




    def table_name(self):

        localctx = TransformExpParser.Table_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_table_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(TransformExpParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_name_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TransformExpParser.Field_nameContext)
            else:
                return self.getTypedRuleContext(TransformExpParser.Field_nameContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TransformExpParser.COMMA)
            else:
                return self.getToken(TransformExpParser.COMMA, i)

        def getRuleIndex(self):
            return TransformExpParser.RULE_field_name_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_name_list" ):
                listener.enterField_name_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_name_list" ):
                listener.exitField_name_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_name_list" ):
                return visitor.visitField_name_list(self)
            else:
                return visitor.visitChildren(self)




    def field_name_list(self):

        localctx = TransformExpParser.Field_name_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_field_name_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.field_name()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TransformExpParser.COMMA:
                self.state = 109
                self.match(TransformExpParser.COMMA)
                self.state = 110
                self.field_name()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TransformExpParser.ExpContext)
            else:
                return self.getTypedRuleContext(TransformExpParser.ExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TransformExpParser.COMMA)
            else:
                return self.getToken(TransformExpParser.COMMA, i)

        def getRuleIndex(self):
            return TransformExpParser.RULE_exp_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_list" ):
                listener.enterExp_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_list" ):
                listener.exitExp_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_list" ):
                return visitor.visitExp_list(self)
            else:
                return visitor.visitChildren(self)




    def exp_list(self):

        localctx = TransformExpParser.Exp_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exp_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.exp(0)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TransformExpParser.COMMA:
                self.state = 117
                self.match(TransformExpParser.COMMA)
                self.state = 118
                self.exp(0)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CHAR(self):
            return self.getToken(TransformExpParser.KW_CHAR, 0)

        def Identifier(self):
            return self.getToken(TransformExpParser.Identifier, 0)

        def getRuleIndex(self):
            return TransformExpParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = TransformExpParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la==TransformExpParser.KW_CHAR or _la==TransformExpParser.Identifier):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(TransformExpParser.FunctionContext,0)


        def L_PAREN(self):
            return self.getToken(TransformExpParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(TransformExpParser.R_PAREN, 0)

        def KW_DISTINCT(self):
            return self.getToken(TransformExpParser.KW_DISTINCT, 0)

        def exp_list(self):
            return self.getTypedRuleContext(TransformExpParser.Exp_listContext,0)


        def ASTERISK(self):
            return self.getToken(TransformExpParser.ASTERISK, 0)

        def getRuleIndex(self):
            return TransformExpParser.RULE_function_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_call" ):
                listener.enterFunction_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_call" ):
                listener.exitFunction_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_call" ):
                return visitor.visitFunction_call(self)
            else:
                return visitor.visitChildren(self)




    def function_call(self):

        localctx = TransformExpParser.Function_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.function()
            self.state = 127
            self.match(TransformExpParser.L_PAREN)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TransformExpParser.KW_DISTINCT:
                self.state = 128
                self.match(TransformExpParser.KW_DISTINCT)


            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TransformExpParser.T__0, TransformExpParser.T__5, TransformExpParser.KW_CASE, TransformExpParser.KW_CAST, TransformExpParser.KW_CHAR, TransformExpParser.KW_NOT, TransformExpParser.KW_NULL, TransformExpParser.DOT, TransformExpParser.L_PAREN, TransformExpParser.StringLiteral, TransformExpParser.NumberLiteral, TransformExpParser.Identifier]:
                self.state = 131
                self.exp_list()
                pass
            elif token in [TransformExpParser.ASTERISK]:
                self.state = 132
                self.match(TransformExpParser.ASTERISK)
                pass
            elif token in [TransformExpParser.R_PAREN]:
                pass
            else:
                pass
            self.state = 135
            self.match(TransformExpParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Order_by_expContext(ParserRuleContext):
        __slots__ = 'parser'
